add views for Meme model
